fix uneven platform icons for popup #2094 AG-14509
Merge in EXTENSIONS/browser-extension from fix/AG-14509 to master

Squashed commit of the following:

commit 4bcd9313410a22e03b845d1c6a805195049eb03a
Merge: 55475e364 7f4de3dd3
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Fri Jun 17 19:37:51 2022 +0300

    Merge branch 'master' into fix/AG-14509

commit 55475e3646e48f9b3a84d39c57df34cddbe67d6b
Author: Stanislav A <s.atroschenko@adguard.com>
Date:   Wed Jun 15 18:39:36 2022 +0300

    fix uneven platform icons for popup

--- a/Extension/src/pages/popup/components/Footer/footer.pcss
+++ b/Extension/src/pages/popup/components/Footer/footer.pcss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     height: 40px;
-    padding: 0 20px;
+    padding: 0 12px 0 16px;
     font-size: 13px;
     color: var(--gray900);
     background-color: var(--gray100);
@@ -31,8 +31,8 @@
     }
 
     &__icon {
-        width: 20px;
-        height: 20px;
+        width: 24px;
+        height: 24px;
         color: var(--gray300);
         transition: 0.3s ease color;
 
